test/fail/missingforward.min
program
    function void hello done $$ should be forward
start
end
